# tableEditor

./: CMakeLists.txt  NaturelSort.h  README.md  columnTypeUtils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablemodel.cpp  tablemodel.h
delegates/: booldelegate.cpp  booldelegate.h  datedelegate.cpp  datedelegate.h  numberdelegate.cpp  numberdelegate.h  stringdelegate.cpp  stringdelegate.h
parser/: xmlparser.cpp  xmlparser.h
serializer/: xmlserializer.cpp  xmlserializer.h
